<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/vhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/sign_inText"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Welcome"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vhod"

        />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:textAlignment="center"
        android:textColor="#D2D2D2"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"

        />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="15dp"
        android:background="#ffffff"
        android:hint="@string/login"
        android:paddingStart="20dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_3" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/signin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />


    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="#FF9800"
        android:text="@string/sign_inBtn"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@id/forgot_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="70dp"
        android:text="@string/forgot_pass"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Нажми сюда"
        android:textColor="#FF9800"
        app:layout_constraintStart_toEndOf="@id/forgot_pass"
        app:layout_constraintTop_toTopOf="@id/forgot_pass" />
</androidx.constraintlayout.widget.ConstraintLayout>

